--- a/ELS-Airport-Security/ELS-Airport-Security.csproj
+++ b/ELS-Airport-Security/ELS-Airport-Security.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Animations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IronPython" Version="3.4.1" />
+  </ItemGroup>
+
 </Project>
